--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@availity/yup": "^3.0.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "country-state-city": "^1.0.4",
+    "formik": "^2.1.4",
+    "mdbreact": "^4.26.1",
+    "moment": "^2.26.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-icons": "^3.10.0",
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.3",
+    "react-ultimate-pagination": "^1.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
